Fix account nonce on delegation address update in block stream (#13811)
The account nonce doesn't get updated when there is a delegation address set for Ethereum type 4 transactions. This PR fixes the importer (block stream support only) to set the correct nonce, taken from the state.

Signed-off-by: Bilyana Gospodinova <bilyana.gospodinova14@gmail.com>